# chia_rs

./: .coverage  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  1.xml  AGENTS.md  Cargo.toml  Cargo.toml.orig  Dockerfile  PROMPT.md  README.md  bump-version.py  clang_test.c  coverage.lcov  docker-compose.yml  llp.sh  mypy.ini  package-lock.json  package.json  pytest.ini  run-fuzzers.sh  rust-toolchain.toml  stubtest.allowlist
chia-bls/: Cargo.toml
chia-bls/benches/: derive_key.rs  parse.rs  sign.rs  verify.rs
chia-bls/fuzz/: Cargo.toml
chia-bls/fuzz/fuzz_targets/: blspy-fidelity.rs  derive.rs
chia-bls/src/: aug_scheme.rs  cached_bls.rs  derive_keys.rs  error.rs  gtelement.rs  lib.rs  lru_cache.rs  message.rs  mnemonic.rs  pairing.rs  public_key.rs  secret_key.rs  signature.rs
chia-client/: Cargo.toml
chia-client/src/: client.rs  error.rs  lib.rs  network.rs  peer.rs  peer_message.rs  utils.rs
chia-client/src/error/: request_error.rs  send_error.rs
chia-client/src/peer/: peer_error.rs  peer_event.rs  peer_message.rs
chia-connection/: Cargo.toml
chia-connection/src/: lib.rs
chia-primitives/: Cargo.toml
chia-primitives/src/: condition.rs  conditions.rs  derive_synthetic.rs  lib.rs  lineage_proof.rs  primitives.rs  proof.rs  puzzles.rs  sign.rs  standard_puzzle.rs  synthetic_keys.rs
chia-primitives/src/primitives/: cat.rs  did.rs  nft.rs  singleton.rs  standard_puzzle.rs
chia-primitives/src/puzzles/: cat.rs  default_hidden_puzzle.rs  standard_transaction.rs
chia-protocol/: Cargo.toml
chia-protocol/fuzz/: Cargo.toml
chia-protocol/fuzz/fuzz_targets/: parse-foliage.rs  parse-full-block.rs  parse-header-block.rs  parse-program.rs  parse-tx-info.rs  spend-bundle.rs  streamable.rs
chia-protocol/src/: block_record.rs  bls.rs  bytes.rs  chia_error.rs  chia_protocol.rs  classgroup.rs  coin.rs  coin_spend.rs  coin_state.rs  end_of_sub_slot_bundle.rs  fee_estimate.rs  foliage.rs  from_json_dict.rs  full_node_protocol.rs  fullblock.rs  header_block.rs  int.rs  lazy_node.rs  lib.rs  message_struct.rs  peer_info.rs  pool_target.rs  program.rs  proof_of_space.rs  respond_to_ph_updates.rs  reward_chain_block.rs  slots.rs  spend_bundle.rs  streamable.rs  to_json_dict.rs  unfinished_block.rs  vdf.rs  wallet_protocol.rs  weight_proof.rs
chia-ssl/: Cargo.toml
chia-ssl/src/: error.rs  lib.rs
chia-tools/: Cargo.toml  graph.gnuplot  parse-analyze-chain.py
chia-tools/src/: lib.rs  visit_spends.rs
chia-traits/: Cargo.toml
chia-traits/src/: chia_error.rs  from_json_dict.rs  int.rs  lib.rs  streamable.rs  to_json_dict.rs
chia-wallet/: Cargo.toml
chia-wallet/fuzz/: Cargo.toml
chia-wallet/fuzz/fuzz_targets/: roundtrip.rs
chia-wallet/src/: coin_selection.rs  coin_store.rs  derive_synthetic.rs  key_store.rs  lib.rs  primitives.rs  proof.rs  utils.rs  wallet.rs  wallet_event.rs  wallet_handler.rs
chia-wallet/src/primitives/: cat.rs  did.rs  nft.rs  offer.rs  singleton.rs  standard.rs
chia-wallet/src/puzzles/: cat.rs  did.rs  nft.rs  singleton.rs  standard.rs
chia-wallet/src/wallet/: cat_info.rs  did_info.rs  key_store.rs  nft_info.rs  nft_mint.rs  offer.rs  wallet_event.rs  wallet_handler.rs  wallet_state.rs
chia_py_streamable_macro/: Cargo.toml
chia_py_streamable_macro/src/: lib.rs
chia_rs_swift/: Cargo.toml  build.rs
chia_rs_swift/src/: chiaSwift.udl  lib.rs
chia_streamable_macro/: Cargo.toml
chia_streamable_macro/src/: lib.rs
clvm-derive/: Cargo.toml
clvm-derive/src/: build_tree.rs  from_clvm.rs  helpers.rs  lib.rs  parse_tree.rs  to_clvm.rs
clvm-macros/: Cargo.toml
clvm-macros/src/: args.rs  crate_ident.rs  helpers.rs  impl_from_clvm.rs  impl_to_clvm.rs  lib.rs  parse_args.rs
clvm-traits/: Cargo.toml
clvm-traits/docs/: derive_macros.md
clvm-traits/src/: allocator_ext.rs  build_tree.rs  clvm_decoder.rs  clvm_encoder.rs  clvm_value.rs  conversions.rs  curried_args.rs  error.rs  from_clvm.rs  lib.rs  macros.rs  match_byte.rs  parse_tree.rs  to_clvm.rs  value.rs  wrappers.rs
clvm-utils/: Cargo.toml  README.md
clvm-utils/fuzz/: Cargo.toml
clvm-utils/fuzz/fuzz_targets/: curry.rs  tree-hash-with-cost.rs  tree-hash.rs  uncurry.rs
clvm-utils/src/: allocate.rs  convert.rs  curried_program.rs  curry.rs  curry_tree_hash.rs  error.rs  lib.rs  new_list.rs  traits.rs  tree_hash.rs  uncurry.rs
clvm-utils/src/convert/: arrays.rs  bls.rs  macros.rs  matchers.rs  primitives.rs  protocol.rs
crates/blst/: Cargo.toml  build.rs
crates/blst/src/: lib.rs
crates/chia-bls/: Cargo.toml  README.md
crates/chia-bls/benches/: cache.rs  derive_key.rs  parse.rs  sign.rs  verify.rs
crates/chia-bls/fuzz/: Cargo.toml
crates/chia-bls/src/: bls_cache.rs  cached_bls.rs  derivable_key.rs  derive_keys.rs  derive_synthetic.rs  error.rs  gtelement.rs  lib.rs  mnemonic.rs  parse_hex.rs  public_key.rs  secret_key.rs  signature.rs
crates/chia-client/: Cargo.toml
crates/chia-client/examples/: client.rs  peer.rs  peer_connection.rs  peer_discovery.rs
crates/chia-client/src/: client.rs  error.rs  event.rs  lib.rs  network.rs  peer.rs  request_map.rs  response.rs  tls.rs  utils.rs
crates/chia-consensus/: Cargo.toml  README.md
crates/chia-consensus/fuzz/: Cargo.toml
crates/chia-datalayer/: Cargo.toml
crates/chia-fuzzing/: Cargo.toml
crates/chia-protocol/: Cargo.toml
crates/chia-puzzle-types/: Cargo.toml
crates/chia-puzzles/: Cargo.toml
crates/chia-secp/: Cargo.toml
wasm/: Cargo.toml  README.md
wasm-patch/: Cargo.toml
wasm-patch/src/: lib.rs
wasm/src/: lib.rs
wheel/: Cargo.toml  README.md  chia_rs.pyi  generate_type_stubs.py  pyproject.toml  requirements.txt  stubtest.allowlist  stubtest.allowlist.3-11-plus  stubtest.allowlist.3-12  stubtest.allowlist.3-13  stubtest.allowlist.3-9  stubtest.allowlist.disjoint-base
wheel/py_streamable/: Cargo.toml
wheel/src/: adapt_response.rs  api.rs  coin.rs  coin_state.rs  compression.rs  error.rs  from_json_dict.rs  lib.rs  main.rs  respond_to_ph_updates.rs  run_generator.rs  run_program.rs  streamable.rs  to_json_dict.rs  visitor.rs  weight_proof.rs
(+558 files in other folders)
