[package]
name = "chia"
version = "0.10.0"
edition = "2021"
license = "Apache-2.0"
description = "A meta-crate that exports all of the Chia crates in the workspace."
authors = [
    "Richard Kiss <him@richardkiss.com>",
    "Arvid Norberg <arvid@chia.net>",
    "Brandon Haggstrom <b.haggstrom@chia.net>"
]
homepage = "https://github.com/Chia-Network/chia_rs"
repository = "https://github.com/Chia-Network/chia_rs"

[workspace]
members = ["crates/*", "crates/*/fuzz", "wasm", "wheel"]

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
unsafe_code = "deny"
non_ascii_idents = "deny"
unused_imports = "warn"
unused_import_braces = "deny"
unreachable_code = "deny"
unreachable_patterns = "deny"
dead_code = "deny"
deprecated = "deny"
deprecated_in_future = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
wildcard_imports = "allow"
too_many_lines = "allow"
module_name_repetitions = "allow"
doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
similar_names = "allow"

[dependencies]
chia-bls = { workspace = true, optional = true }
chia-client = { workspace = true, optional = true }
chia-consensus = { workspace = true, optional = true }
chia-protocol = { workspace = true, optional = true }
chia-ssl = { workspace = true, optional = true }
chia-traits = { workspace = true, optional = true }
chia-puzzles = { workspace = true, optional = true }
clvm-traits = { workspace = true, optional = true }
clvm-utils = { workspace = true, optional = true }

[features]
default = [
    "bls",
    "client",
    "consensus",
    "protocol",
    "ssl",
    "traits",
    "puzzles",
    "clvm-traits",
    "clvm-utils"
]

bls = ["dep:chia-bls"]
client = ["dep:chia-client"]
consensus = ["dep:chia-consensus"]
protocol = ["dep:chia-protocol"]
ssl = ["dep:chia-ssl"]
traits = ["dep:chia-traits"]
puzzles = ["dep:chia-puzzles"]
clvm-traits = ["dep:clvm-traits"]
clvm-utils = ["dep:clvm-utils"]

[profile.release]
lto = "thin"

[workspace.dependencies]
chia_py_streamable_macro = { path = "./crates/chia_py_streamable_macro", version = "0.10.0" }
chia_streamable_macro = { path = "./crates/chia_streamable_macro", version = "0.10.0" }
chia-bls = { path = "./crates/chia-bls", version = "0.10.0" }
chia-client = { path = "./crates/chia-client", version = "0.10.0" }
chia-consensus = { path = "./crates/chia-consensus", version = "0.10.0" }
chia-protocol = { path = "./crates/chia-protocol", version = "0.10.0" }
chia-ssl = { path = "./crates/chia-ssl", version = "0.10.0" }
chia-traits = { path = "./crates/chia-traits", version = "0.10.0" }
chia-puzzles = { path = "./crates/chia-puzzles", version = "0.10.0" }
clvm-traits = { path = "./crates/clvm-traits", version = "0.10.0" }
clvm-utils = { path = "./crates/clvm-utils", version = "0.10.0" }
clvm-derive = { path = "./crates/clvm-derive", version = "0.10.0" }
chia-fuzz = { path = "./crates/chia-consensus/fuzz", version = "0.10.0" }
blst = { version = "0.3.12", features = ["portable"] }
clvmr = "0.7.0"
syn = "2.0.71"
quote = "1.0.32"
proc-macro2 = "1.0.84"
proc-macro-crate = "1.3.1"
anyhow = "1.0.86"
sha2 = "0.10.8"
hkdf = "0.12.0"
hex = "0.4.3"
thiserror = "1.0.62"
pyo3 = "0.21.2"
arbitrary = "1.3.2"
lru = "0.12.2"
rand = "0.8.5"
criterion = "0.5.1"
rstest = "0.17.0"
tokio = "1.38.1"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.28"
tungstenite = "0.21.0"
hex-literal = "0.4.1"
num-traits = "0.2.15"
num-bigint = "0.4.5"
text-diff = "0.4.0"
lazy_static = "1.4.0"
rcgen = "0.13.1"
rsa = "0.9.5"
time = "0.3.22"
rusqlite = "0.31.0"
clap = "4.5.8"
zstd = "0.13.2"
blocking-threadpool = "1.0.1"
libfuzzer-sys = "0.4"
wasm-bindgen = "0.2.92"
parking_lot = "0.12.3"
