[package]
name = "chia-bls"
version = "0.1.0"
edition = "2021"

[dependencies]
tiny-bip39 = "=1.0.0"
anyhow = "=1.0.65"
# the newer sha2 crate doesn't implement the digest traits required by hkdf
sha2 = "=0.9.9"
bls12_381_plus = "=0.7.0"
num-bigint = "=0.4.3"
hkdf = "=0.11.0"
group = "=0.12.0"

[dev-dependencies]
hex = "^0.4.3"
rand = "^0.8.5"
criterion = "^0.4"

[[bench]]
name = "derive_key"
harness = false

[[bench]]
name = "sign"
harness = false

[[bench]]
name = "verify"
harness = false
