[package]
name = "chia-bls"
version = "0.2.7"
edition = "2021"
license = "Apache-2.0"
description = "BLS signature, verification and aggregation funcions for the Chia blockchain"
authors = ["Arvid Norberg <arvid@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs/chia-bls/"
repository = "https://github.com/Chia-Network/chia_rs/chia-bls/"

[dependencies]
tiny-bip39 = "1.0.0"
anyhow = "1.0.71"
# the newer sha2 crate doesn't implement the digest traits required by hkdf
sha2 = "0.9.9"
bls12_381_plus = "0.7.0"
num-bigint = "0.4.3"
hkdf = "0.11.0"
group = "0.12.0"

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"
criterion = "0.5.1"

[lib]
crate-type = ["rlib"]

[[bench]]
name = "derive_key"
harness = false

[[bench]]
name = "sign"
harness = false

[[bench]]
name = "verify"
harness = false
