[package]
name = "chia-bls"
version = "0.2.7"
edition = "2021"
license = "Apache-2.0"
description = "BLS signature, verification and aggregation funcions for the Chia blockchain"
authors = ["Arvid Norberg <arvid@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs/chia-bls/"
repository = "https://github.com/Chia-Network/chia_rs/chia-bls/"

[dependencies]
blst = "0.3.10"
sha2 = "0.9.9"

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"
criterion = "0.5.1"
bip39 = "2.0.0"

[lib]
crate-type = ["rlib"]

[[bench]]
name = "derive_key"
harness = false

[[bench]]
name = "sign"
harness = false

[[bench]]
name = "verify"
harness = false
