[package]
name = "chia-client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Chia light client protocol implementation"
authors = ["Brandon Haggstrom <b.haggstrom@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs/chia-client/"
repository = "https://github.com/Chia-Network/chia_rs/chia-client/"

[dependencies]
chia-protocol = { version = "0.2.7", path = "../chia-protocol" }
futures-util = "0.3.28"
native-tls = "0.2.11"
tokio = { version = "1", features = ["rt", "net", "sync"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
tungstenite = "0.19.0"