[package]
name = "chia-client"
version = "0.2.13"
edition = "2021"
license = "Apache-2.0"
description = "Chia light client and async peer connections."
authors = ["Brandon Haggstrom <b.haggstrom@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs/chia-client/"
repository = "https://github.com/Chia-Network/chia_rs/chia-client/"

[dependencies]
chia-protocol = { version = "0.3.3", path = "../chia-protocol" }
chia-traits = { version = "0.3.3", path = "../chia-traits" }
tokio = { version = "1.32.0", features = ["rt", "sync"] }
tokio-tungstenite = "0.20.0"
futures-util = "0.3.28"
tungstenite = "0.20.1"
thiserror = "1.0.47"
