[package]
name = "chia-protocol"
version = "0.2.13"
edition = "2021"
license = "Apache-2.0"
description = "Chia network protocol message types"
authors = ["Arvid Norberg <arvid@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs/chia-protocol/"
repository = "https://github.com/Chia-Network/chia_rs/chia-protocol/"

[features]
py-bindings = ["dep:pyo3", "dep:chia_py_streamable_macro", "chia-traits/py-bindings"]

[dependencies]
pyo3 = { version = ">=0.19.0", features = ["multiple-pymethods"], optional = true }
sha2 = "0.9.9"
hex = "0.4.3"
chia_streamable_macro = { version = "0.2.12", path = "../chia_streamable_macro" }
chia_py_streamable_macro = { version = "0.2.13", path = "../chia_py_streamable_macro", optional = true }
clvmr = "0.3.0"
chia-traits = { version = "0.2.13", path = "../chia-traits" }
clvm-traits = { version = "0.2.12", path = "../clvm-traits", features = ["derive"] }
chia-bls = { version = "0.2.13", path = "../chia-bls" }
arbitrary = { version = "=1.3.0", features = ["derive"] }

[dev-dependencies]
rstest = "0.17.0"

[lib]
crate-type = ["rlib"]
