[package]
name = "chia-ssl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Chia SSL X.509 certificate generator"
authors = ["Brandon Haggstrom <b.haggstrom@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs/chia-ssl/"
repository = "https://github.com/Chia-Network/chia_rs/chia-ssl/"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
rcgen = { version = "0.11.1", features = ["pem", "x509-parser"] }
rsa = "0.9.2"
rustls = "0.21.2"
time = "0.3.22"