[package]
name = "chia-tools"
version = "0.2.14"
edition = "2021"
license = "Apache-2.0"
description = "Utility functions and types used by the Chia blockchain full node"
authors = ["Arvid Norberg <arvid@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs/chia-tools"
repository = "https://github.com/Chia-Network/chia_rs/chia-tools"

[dependencies]
chia-protocol = { version = "0.2.14", path = "../chia-protocol" }
chia-traits = { path = "../chia-traits" }
clvm-utils = { path = "../clvm-utils" }
clvm-traits = { path = "../clvm-traits" }
chia-wallet = { version = "=0.2.14", path = "../chia-wallet" }
clvmr = { version = "=0.3.0", features = ["counters"] }
chia = { version = "0.2.14", path = ".." }
sqlite = "=0.31.0"
clap = { version = "=4.3.9", features = ["derive"] }
zstd = "=0.12.3"
threadpool = "=1.8.1"
hex = "=0.4.3"
hex-literal = "=0.4.1"

[lib]
name = "chia_tools"
crate-type = ["rlib"]

[[bin]]
name = "analyze-chain"
test = false
bench = false

[[bin]]
name = "test-block-generators"
test = false
bench = false

[[bin]]
name = "compress-clvm"
test = false
bench = false

[[bin]]
name = "gen-corpus"
test = false
bench = false

[[bin]]
name = "run-spend"
test = false
bench = false

[[bin]]
name = "fast-forward-spend"
test = false
bench = false
