[package]
name = "chia-wallet"
version = "0.2.12"
edition = "2021"
license = "Apache-2.0"
description = "Chia primitives needed for building wallets."
authors = ["Brandon Haggstrom <b.haggstrom@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs/chia-wallet/"
repository = "https://github.com/Chia-Network/chia_rs/chia-wallet/"

[dependencies]
clvmr = "0.3.0"
hex-literal = "0.4.1"
clvm-utils = { version = "0.2.12", path = "../clvm-utils" }