[package]
name = "chia-wallet"
version = "0.5.1"
edition = "2021"
license = "Apache-2.0"
description = "Chia primitives needed for building wallets."
authors = ["Brandon Haggstrom <b.haggstrom@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs/chia-wallet/"
repository = "https://github.com/Chia-Network/chia_rs/chia-wallet/"

[dependencies]
clvmr = "0.5.0"
sha2 = "0.10.8"
num-bigint = "0.4.3"
hex-literal = "0.4.1"
clvm-utils = { version = "0.5.1", path = "../clvm-utils" }
clvm-traits = { version = "0.5.1", path = "../clvm-traits", features = ["chia-bls"] }
chia-bls = { version = "0.5.1", path = "../chia-bls" }
chia-protocol = { version = "0.5.1", path = "../chia-protocol" }
arbitrary = "1.3.0"

[dev-dependencies]
hex = "0.4.3"

[lib]
crate-type = ["rlib"]
