[package]
name = "clvm-derive"
version = "0.5.2"
edition = "2021"
license = "Apache-2.0"
description = "Derive macros for implementing CLVM traits."
authors = ["Brandon Haggstrom <b.haggstrom@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs/clvm-derive/"
repository = "https://github.com/Chia-Network/chia_rs/clvm-derive/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = "2.0.28"
