[package]
name = "clvm-macros"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "CLVM procedural macros"
authors = ["Brandon Haggstrom <b.haggstrom@chia.net>"]
homepage = "https://github.com/Chia-Network/chia_rs/clvm-macros/"
repository = "https://github.com/Chia-Network/chia_rs/clvm-macros/"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "1.3.1"
proc-macro2 = "1.0.66"
quote = "1.0.31"
syn = "2.0.26"
