[package]
name = "chia_wasm"
version = "0.35.1"
authors = ["Richard Kiss <him@richardkiss.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Code useful for implementing chia consensus."
homepage = "https://github.com/Chia-Network/chia_rs"
repository = "https://github.com/Chia-Network/chia_rs"
readme = "README.md"

[lints]
workspace = true

[lib]
name = "chia_wasm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = { workspace = true }
